# junto

./: .gitattributes  .gitignore  .junto.toml  .mcp.json  CLAUDE.md  Cargo.toml  LICENSE  README.md
.claude/: settings.json
.claude/hooks/: rust-check.ps1
.claude/skills/dead-ends/: SKILL.md
.github/workflows/: ci.yml
crates/junto/: Cargo.toml
crates/junto-desktop/: Cargo.toml  tauri.conf.json
crates/junto-desktop/src/: main.rs
crates/junto-iced/: Cargo.toml
crates/junto-iced/src/: main.rs
crates/junto-kernel/: Cargo.toml
crates/junto-kernel/src/: entry.rs  error.rs  gate.rs  ids.rs  ledger.rs  lib.rs  member.rs  provenance.rs  serial.rs  session.rs  substrate.rs  time.rs
crates/junto-substrate-git/: Cargo.toml
crates/junto-substrate-git/src/: lib.rs
crates/junto/src/: acp.rs  agent.rs  binding.rs  forge.rs  grader.rs  host.rs  init.rs  launch.rs  main.rs  mcp.rs  members.rs  outcome.rs  pending_lineage.rs  persona.rs  render.rs  verify.rs  web.rs
docs/: ace-openapi-0.1.70.json  architecture.md  attention.md  competitive-ace.md  competitive-landscape.md  domain-model.md  junto.md  native-ui-toolkit-assessment.md  pluggability.md  self-improving-harness.md  worked-example-agent-coding.md  worked-example-production-troubleshooting.md  worked-example-research.md
docs/adr/: 0001-ledger-is-the-durable-record.md  0002-ledger-entries-are-immutable.md  0003-ledger-entry-content-model.md  0004-any-member-may-author-any-entry.md  0005-provenance-ref-uri-plus-digest.md  0006-gate-engine-event-sourced.md  0007-routing-stays-out-of-the-kernel.md  0008-canonical-entry-serialization-is-jcs-json.md  0009-git-refs-substrate-ndjson-per-author.md  0010-canonical-order-and-dedup-by-entry-id.md  0011-sync-is-push-fetch-plus-convergent-union-merge.md  0012-mcp-over-http-is-the-first-write-surface.md  0013-host-serves-the-read-surface-recall-via-hook.md  0014-channel-identity-is-minted-names-are-substrate-scoped-labels.md  0015-one-host-per-machine-serving-many-substrates.md  0016-channel-lifecycle-acts-are-ledger-entries.md  0017-party-is-a-projection-membership-is-founder-granted.md  0018-human-surface-is-a-desktop-shell-over-the-host.md  0019-decision-frames-on-subject-entries.md  0020-agent-sessions-and-artifacts-are-ledger-entries.md  0021-member-codes-guard-agent-surfaces-only.md  0022-channel-close-and-reopen-are-lifecycle-entries.md  0023-launching-agent-sessions-oneshot-first-pty-next.md  0024-acp-is-the-harness-protocol.md  0025-align-terminology-on-anthropic-managed-agents.md  0026-routing-policy-resolves-to-auto-or-gate-the-autonomy-envelope.md  0027-channel-lineage-is-diverge-converge-edge-entries.md  0028-eventually-consistent-lineage-reconciliation.md  0029-approved-gates-execute-via-an-app-level-reaction.md  0030-surface-approved-but-unexecuted-actionable-gates.md  0031-junto-reconciles-against-external-forge-state.md  0032-mid-turn-steer.md  0033-human-surface-is-a-native-iced-app.md  README.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
docs/superpowers/plans/: 2026-06-14-human-surface-redesign.md  2026-06-19-mid-turn-steer.md
docs/superpowers/specs/: 2026-06-13-agent-personas-design.md  2026-06-14-human-surface-redesign-design.md  2026-06-19-harness-mid-turn-steer-design.md
docs/superpowers/specs/assets/2026-06-14-human-surface-redesign/: PROTOTYPE-human-surface.html  mock-overview.html  mock-session-blade.html
