# junto workspace — see CLAUDE.md and domain-model.md.
# Kernel ↔ adapter ↔ app seam: the kernel is generic; vendor code lives behind
# adapter crates; the `junto` binary is the host/app entry (not a human terminal).
[workspace]
resolver = "3"
members = ["crates/junto-kernel", "crates/junto", "crates/junto-substrate-git"]
# junto-desktop (the Tauri shell, docs/adr/0018) is its own workspace: Tauri's
# dependency tree would slow every kernel `cargo check --workspace`/CI run.
# It has a dedicated CI job; build it via --manifest-path.
exclude = ["crates/junto-desktop"]

[workspace.package]
edition = "2024"
rust-version = "1.94"
license = "MIT"
authors = ["Dan Cieslak <dcieslak@hotmail.com>"]

[workspace.dependencies]
# internal
junto-kernel = { path = "crates/junto-kernel" }
junto-substrate-git = { path = "crates/junto-substrate-git" }
# external (latest as of 2026-06-08)
thiserror = "2.0.18"
anyhow = "1.0.102"
uuid = { version = "1.23.2", features = ["v4", "serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
# JCS / RFC 8785 canonical JSON for the durable record (MIT; RFC-compliant
# successor to the abandoned serde_jcs). See docs/adr/0008.
serde_json_canonicalizer = "0.3.2"
# async runtime; `process` drives the git CLI in the git-refs substrate, `macros`+`rt`
# drive the async SubstrateProvider in tests (the in-memory impl does no real I/O)
tokio = { version = "1.52.3", features = ["macros", "rt", "process"] }
# dev-only: real temp git repos for the git-refs substrate tests (MIT/Apache)
tempfile = "3.24.0"
# the MCP write surface served by `junto serve` (official SDK, Apache-2.0;
# streamable HTTP per docs/adr/0012)
rmcp = { version = "1.7.0", features = ["transport-streamable-http-server"] }
axum = "0.8"
schemars = "1.0"
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# human-readable timestamps on the channel read surface
time = "0.3"
# the machine-local substrate registry + per-repo channel binding files (docs/adr/0015)
toml = "0.9"
# canonicalize without Windows' \\?\ verbatim prefix (registry + human surfaces
# show these paths; MIT/Apache)
dunce = "1"
# content digests for artifact provenance (docs/adr/0005, 0023; MIT/Apache)
sha2 = "0.10"
