[package]
name = "junto-kernel"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "junto kernel — the generic, playbook-agnostic core"

[dependencies]
thiserror.workspace = true
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_json_canonicalizer.workspace = true

[dev-dependencies]
tokio.workspace = true
